# zk-Autograd

./: Design.md  LICENSE  README.md  Security.md  Use_Cases.md  demo.ipynb  pyproject.toml
.github/workflows/: ci_evm_verifier.yml  ci_local.yml  ci_nitro.yml  ci_oci_cvm.yml  publish_artifacts.yml
contracts/: RunAnchor.sol
contracts/test/: RunAnchor.t.sol
deployment/aws-nitro/: README.md  anchor_service.py  build_eif.sh  enclave.Dockerfile  run_enclave.sh  vsock_proxy.py
deployment/oci-cvm/: README.md  attestation_notes.md  cloud-init.yaml  start_prover.sh
docker/: Dockerfile.prover  Dockerfile.trainer  docker-compose.yml
prover/: ezkl_runner.py  service.py
src/zk_autograd/: anchoring.py  audit_log.py  config.py  evm_verifier.py  ezkl_aggregate.py  ezkl_setup.py  hooks.py  prover_client.py  quantize.py  splitting.py  step_circuit.py  torrents.py  trainer.py  triton_kernels.py
tests/: conftest.py  test_circuits.py  test_core.py  test_corner_cases.py  test_fuzz_verifier.py  test_integration.py  test_prover_service.py  test_splitting.py  test_triton.py  test_webapp.py
verifier/: public_inputs.py  verify_steps.py
webapp/: app.js  index.html  style.css
